Fixed alignment & font size

--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   background: #ffffff;
   color: #222;
+  letter-spacing: 0%;
 }
 
 /* Container */
@@ -45,9 +46,11 @@ body {
 }
 
 .btn-outline {
-  border: 2px solid #fff;
+  border: 1px solid rgba(255, 255, 255, 1);
+  border-radius: 4px;
   color: #fff;
-  background-color: #00193180;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .btn:hover {
@@ -80,15 +83,16 @@ body {
 
 .menu a {
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 16px;
   color: #222;
+  opacity: 0.9;
   transition: all 0.2s ease;
 }
 
 .menu a:hover {
   color: #28a745;
   text-decoration: underline;
-  text-shadow: 0 0 15px 12px #218838;
 }
 
 /* hero Section */
@@ -164,11 +168,11 @@ body {
 }
 
 .hero-title {
-  font-size: 52px;
+  font-size: 72px;
   font-weight: 700;
   margin-top: 20px;
   color: #fff;
-  line-height: 1.15;
+  line-height: 1.2;
 }
 
 .accent {
@@ -177,9 +181,11 @@ body {
 
 .hero-sub {
   margin-top: 18px;
-  color: #eaeaea;
-  font-size: 16px;
-  line-height: 1.7;
+  color: #d9d9d9;
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: 0%;
 }
 
 .hero-actions {
@@ -202,13 +208,15 @@ body {
 }
 
 .section-head h2 {
-  font-size: 32px;
+  font-size: 48px;
   font-weight: 700;
 }
 
 .muted {
   margin-top: 10px;
   color: #666;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .cards-row {
@@ -229,7 +237,7 @@ body {
 
 .card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
 }
 
 .icon {
@@ -250,7 +258,7 @@ body {
 }
 
 .card p {
-  font-size: 14px;
+  font-size: 13px;
   color: #666;
 }
 
@@ -280,18 +288,22 @@ body {
 
 .kicker {
   color: #28a745;
-  font-weight: 700;
-  font-size: 14px;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .brain-content h2 {
-  font-size: 32px;
+  font-size: 48px;
   margin: 12px 0 16px;
+  font-weight: 700;
+  line-height: 58px;
 }
 
 .brain-content p {
   color: #666;
   line-height: 1.7;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .benefits {
@@ -303,20 +315,23 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
   margin-bottom: 12px;
 }
 
 /* Early Access */
 .early-access {
-  background: #faf8f4;
+  background: #ffffff;
   padding: 100px 0;
   display: flex;
   justify-content: center;
 }
 
 .ea-card {
-  background: #ffffff;
-  max-width: 960px;
+  background: #faf8f4;
+  max-width: 1360px;
   width: 100%;
   padding: 70px 20px;
   border-radius: 16px;
@@ -351,7 +366,9 @@ body {
   display: flex;
   gap: 8px;
   color: #6b7a8c;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 /* Footer  */
@@ -368,19 +385,21 @@ body {
 }
 
 .footer-left img {
-  max-height: 40px;
+  width: 139px;
+  height: 60px;
 }
 
 .footer-right {
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 12px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1.6;
 }
 
 .social-title {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
 }
 
 .social-icons {
@@ -389,8 +408,8 @@ body {
 }
 
 .social-icons a {
-  width: 32px;
-  height: 32px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
   background: black;
   color: whitesmoke;
@@ -398,7 +417,8 @@ body {
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  transition: 0.2s ease;
+  transition: all 0.2s ease;
+  margin-top: 10px;
 }
 
 .social-icons a:hover {
@@ -417,8 +437,11 @@ body {
 
 .copyright {
   text-align: center;
-  font-size: 14px;
-  color: #d0d6dd;
+  color: rgba(250, 250, 250, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0%;
 }
 
 /* animations */
